test/tests/stages/18_structures/valid/params_and_returns/libraries/missing_retval.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  struct
  identifier(big)
  {
  char
  identifier(arr)
  [
  const int(25)
  ]
  ;
  }
  ;
  struct
  identifier(big)
  identifier(missing_return_value)
  (
  int
  *
  identifier(i)
  )
  ;
  struct
  identifier(big)
  identifier(missing_return_value)
  (
  int
  *
  identifier(i)
  )
  {
  *
  identifier(i)
  =
  const int(10)
  ;
  }
