test/tests/stages/18_structures/invalid_parse/extra_credit/union_member_storage_class.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[9]:
  union
  identifier(y)
  {
  static
  int
  identifier(a)
  ;
  }
  ;
